# cli-nlp

./: .coverage  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCT_BRIEF.md  PUBLISHING.md  README.md  SECURITY.md  TEST_REFINEMENT_SUMMARY.md  cli_nlp.py  config.json.example  coverage.xml  pyproject.toml  roadmap.md
.cursor/rules/: architecture.mdc  coding.mdc  documentation.mdc  git.mdc  project-context.mdc  self-healing.mdc  testing.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-approve-owner.yml  lint.yml  publish.yml  (+1 more)
cli_nlp/: __init__.py  cache_manager.py  cli.py  command_runner.py  completer.py  config_manager.py  context_manager.py  exceptions.py  history_manager.py  logger.py  metrics.py  models.py  provider_manager.py  retry.py  template_manager.py  utils.py  validation.py
docs/: API.md  DEVELOPMENT.md  TROUBLESHOOTING.md
tests/: __init__.py  conftest.py  test_cache_edge_cases.py  test_cache_error_paths.py  test_cli.py  test_cli_phase3.py  test_command_runner.py  test_command_runner_error_paths.py  test_completer.py  test_config_error_paths.py  test_exceptions.py  test_logger.py  test_managers.py  test_metrics.py  test_models.py  test_provider_manager.py  test_provider_manager_error_paths.py  test_retry.py  test_retry_edge_cases.py  test_utils.py  test_validation.py
(+10 files in other folders)
